Prevent footer from overlapping last awards.

--- a/source/stylesheets/settings/_grid_layout.scss
+++ b/source/stylesheets/settings/_grid_layout.scss
@@ -2,3 +2,5 @@ $grid-columns: 5;
 $column: 180px;
 $gutter: 30px;
 
+$footer-height: 2 * $gutter;
+
